make more robust - allow start finding first avaialble journal, fall back to *current when receiver range not found and check current receiver is in list of receivers