@@ -117,12 +117,11 @@ class JournalReceiversTest {
 	@Test
 	void testFindRangeMidFirstEntry() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = Arrays.asList(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(5), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(6), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(22), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(3), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(5), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(6), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(22), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(3), list, j3);
 		assertTrue(position.isPresent());
 		assertEquals(BigInteger.valueOf(4), position.get().getOffset());
 	}
@@ -131,12 +130,11 @@ class JournalReceiversTest {
 	@Test
 	void testFindRangeMidSecondEntryReset() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = Arrays.asList(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list, j3);
 		assertTrue(position.isPresent());
 		assertEquals(BigInteger.valueOf(6), position.get().getOffset());
 	}
@@ -144,12 +142,11 @@ class JournalReceiversTest {
 	@Test
 	void testFindRangeMidSecondContiguous() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = List.of(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(22), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(10), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(22), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(10), list, j3);
 		assertTrue(position.isPresent());
 		assertEquals(BigInteger.valueOf(11), position.get().getOffset());
 	}
@@ -157,12 +154,11 @@ class JournalReceiversTest {
 	@Test
 	void testFindRangeMidEndEntry() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = List.of(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(35), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(30), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(35), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = Arrays.asList(j1, j2, j3);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(30), list, j3);
 		assertTrue(position.isPresent());
 		assertEquals(BigInteger.valueOf(31), position.get().getOffset());
 	}
@@ -170,12 +166,11 @@ class JournalReceiversTest {
 	@Test
 	void testFindRangePastEnd() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = List.of(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(35), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(100), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(2), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(3), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(35), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = List.of(j1, j2, j3);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.ONE, j1.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(100), list, j3);
 		assertTrue(position.isPresent());
 		assertEquals(BigInteger.valueOf(35), position.get().getOffset());
 	}
@@ -183,13 +178,12 @@ class JournalReceiversTest {
 	@Test
 	void testFindMidStartingMid() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = List.of(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(31), Optional.of(new JournalReceiver("j4", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j4", "jlib"), new Date(4), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(41), BigInteger.valueOf(50), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.valueOf(10), new JournalReceiver("j3", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.of(new JournalReceiver("j3", "jlib")), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(31), Optional.of(new JournalReceiver("j4", "jlib")), 1, 1);
+		DetailedJournalReceiver j4 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j4", "jlib"), new Date(4), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(41), BigInteger.valueOf(50), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = List.of(j1, j2, j3, j4);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.valueOf(10), j3.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list, j4);
 		assertTrue(position.isPresent());
 		assertEquals(BigInteger.valueOf(25), position.get().getOffset());
 
@@ -198,11 +192,10 @@ class JournalReceiversTest {
 	@Test
 	void testFindStartingPastEnd() {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
-		List<DetailedJournalReceiver> list = List.of(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.empty(), 1, 1)
-		);
-		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.valueOf(30), new JournalReceiver("j3", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = List.of(j1, j2);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.valueOf(30), new JournalReceiver("j3", "jlib"), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list, j2);
 		assertTrue(position.isEmpty());
 	}
 
@@ -226,7 +219,7 @@ class JournalReceiversTest {
 		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, maxOffset, journalInfo);
 		
 		JournalProcessedPosition startPosition = new JournalProcessedPosition(BigInteger.ONE, new JournalReceiver("j1", "jlib"), Instant.ofEpochSecond(0), true);
-		DetailedJournalReceiver endJournalPosition = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
+		DetailedJournalReceiver endJournalPosition = new DetailedJournalReceiver(new JournalReceiverInfo(startPosition.getReciever(), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(100), Optional.empty(), 1, 1);
 
 		PositionRange range = jreceivers.maxOffsetInSameReceiver(startPosition, endJournalPosition, maxServerSideEntriesBI);
 		assertEquals(startPosition.getOffset().add(maxServerSideEntriesBI), range.end().getOffset());
@@ -234,14 +227,25 @@ class JournalReceiversTest {
 	
 	@Test
 	void testUpdateEndPosition() {
-		List<DetailedJournalReceiver> list = Arrays.asList(
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1),
-				new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.empty(), 1, 1)
-		);
-		DetailedJournalReceiver endPosition = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(200), Optional.empty(), 1, 1);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.empty(), 1, 1);
+		List<DetailedJournalReceiver> list = Arrays.asList(j1, j2);
+
+		DetailedJournalReceiver endPosition = new DetailedJournalReceiver(new JournalReceiverInfo(j2.info().receiver(), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(200), Optional.empty(), 1, 1);
 		JournalReceivers.updateEndPosition(list, endPosition);
 		
 		assertEquals(endPosition, list.get(1));
 	}
 
+	
+	@Test
+	void testFindMissingCurrentReceiver() {
+		JournalReceivers jreceivers = new JournalReceivers(journalInfoRetrieval, 100, journalInfo);
+		DetailedJournalReceiver j1 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j1", "jlib"), new Date(1), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(1), BigInteger.valueOf(10), Optional.of(new JournalReceiver("j2", "jlib")), 1, 1);
+		DetailedJournalReceiver j2 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j2", "jlib"), new Date(2), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(11), BigInteger.valueOf(20), Optional.empty(), 1, 1);
+		DetailedJournalReceiver j3 = new DetailedJournalReceiver(new JournalReceiverInfo(new JournalReceiver("j3", "jlib"), new Date(3), JournalStatus.OnlineSavedDetached, Optional.of(1)), BigInteger.valueOf(21), BigInteger.valueOf(31), Optional.of(new JournalReceiver("j4", "jlib")), 1, 1);
+		List<DetailedJournalReceiver> list = List.of(j1, j2);
+		Optional<JournalPosition> position = jreceivers.findPosition(new JournalProcessedPosition(BigInteger.valueOf(30), j1.info().receiver(), Instant.ofEpochSecond(0), true), BigInteger.valueOf(15), list, j3);
+		assertTrue(position.isEmpty());
+	}
 }
